[package]
name = "double-dict-server"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
blake2 = "0.10"
rmp-serde = "1.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
